@@ -31,8 +31,11 @@ Changes to next release:
   - implemented CR8 register (aliased to APIC.TPR[7:4]) in x86-64 mode
   - implemented NXE bit (No-Execute page protection) support for x86-64
   - in case of --enable-ignore-bad-msr enabled read ignored MSRs as zero
-  - enabled #DE and #TSD and #MCE bits in CR4 register, previosly setting
+  - enabled #DE, #TSD and #MCE bits in CR4 register, previosly setting
     of one of these bits generated #GP(0) (Stanislav, Volker Ruppert)
+  - exceeding the instruction length limit of 15 bytes (this only can
+    occur when redundant prefixes are placed before an instruction)
+    generate #GP(0) (Stanislav)
 
 - FPU
   - totally rewritten all FPU code based on softfloat library 
